--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "phpoffice/phpspreadsheet": "dev-NumberFormatMask-Helpers",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^5.5",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
